add validation for data
