# models/seller.go
@@ -10,19 +10,15 @@ import (
 
 type Seller struct {
 	SellerId  int       `gorm:"primary_key" json:"id"`
-	Name      string    `json:"name"`
-	Username  string    `json:"username"`
-	Password  string    `json:"password"`
-	Address   string    `json:"address"`
-	Phone     string    `json:"phone"`
+	Name      string    `json:"name" validate:"required, min=4, max=15"`
+	Username  string    `json:"username" validate:"required, min=4,max=16"`
+	Password  string    `json:"password" validate:"required max=8"`
+	Address   string    `json:"address" validate:"required"`
+	Phone     string    `json:"phone" validate:"required, numeric, len=12"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
 	Products  []Product `json:"-"`
 }
-
-// func VerifyPassword(password, hashedPassword string) error {
-// 	return bcrypt.CompareHashAndPassword([]byte(hashedPassword), []byte(password))
-// }
 
 func LoginCheckSeller(username string, password string, db *gorm.DB) (string, error) {
 
@@ -51,20 +47,3 @@ func LoginCheckSeller(username string, password string, db *gorm.DB) (string, er
 	return token, nil
 
 }
-
-// func (u *Seller) SaveSellerAsUser(db *gorm.DB) (*Seller, error) {
-// 	//turn password into hash
-// 	hashedPassword, errPassword := bcrypt.GenerateFromPassword([]byte(u.Password), bcrypt.DefaultCost)
-// 	if errPassword != nil {
-// 		return &Seller{}, errPassword
-// 	}
-// 	u.Password = string(hashedPassword)
-// 	//remove spaces in username
-// 	u.Username = html.EscapeString(strings.TrimSpace(u.Username))
-
-// 	var err error = db.Create(&u).Error
-// 	if err != nil {
-// 		return &Seller{}, err
-// 	}
-// 	return u, nil
-// }
